# PersistenceAPI

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
include/: PersistenceAPI.hpp  PersistencyUtils.hpp  import_export.hpp
include/hooks/: ActiveSaveObject.hpp  AdvancedFollowInstance.hpp  CAState.hpp  CollisionTriggerAction.hpp  CountTriggerAction.hpp  DynamicObjectAction.hpp  DynamicSaveObject.hpp  EffectManagerState.hpp  EnterEffectAnimValue.hpp  EnterEffectInstance.hpp  EventTriggerInstance.hpp  FMODAudioState.hpp  FMODQueuedMusic.hpp  FMODSoundState.hpp  FMODSoundTween.hpp  GJGameState.hpp  GJShaderState.hpp  GJValueTween.hpp  GameObjectPhysics.hpp  GroupCommandObject2.hpp  KeyframeObject.hpp  OpacityEffectAction.hpp  PlayLayer.hpp  PlayerCheckpoint.hpp  PulseEffectAction.hpp  SFXStateContainer.hpp  SFXTriggerInstance.hpp  SFXTriggerState.hpp  SavedActiveObjectState.hpp  SavedObjectStateRef.hpp  SavedSpecialObjectState.hpp  SequenceTriggerState.hpp  SongChannelState.hpp  SongTriggerState.hpp  SoundStateContainer.hpp  SpawnTriggerAction.hpp  TimerItem.hpp  TimerTriggerAction.hpp  ToggleTriggerAction.hpp  TouchToggleAction.hpp  (+1 more)
include/hooks/cocos2d/: CCArray.hpp  CCNode.hpp  CCObject.hpp
include/util/: InputStream.hpp  OutputStream.hpp  Stream.hpp  debug.hpp
src/hooks/: ActiveSaveObject.cpp  ActiveSaveObject.hpp  AdvancedFollowInstance.cpp  CAState.cpp  CollisionTriggerAction.cpp  CountTriggerAction.cpp  DynamicObjectAction.cpp  DynamicSaveObject.cpp  DynamicSaveObject.hpp  EffectManagerState.cpp  EnterEffectAnimValue.cpp  EnterEffectInstance.cpp  EventTriggerInstance.cpp  FMODAudioState.cpp  FMODQueuedMusic.cpp  FMODSoundState.cpp  FMODSoundTween.cpp  GJGameState.cpp  GJShaderState.cpp  GJValueTween.cpp  GameObjectPhysics.cpp  GroupCommandObject2.cpp  KeyframeObject.cpp  OpacityEffectAction.cpp  PlayLayer.cpp  PlayerCheckpoint.cpp  PulseEffectAction.cpp  SFXStateContainer.cpp  SFXTriggerInstance.cpp  SFXTriggerState.cpp  SavedActiveObjectState.cpp  SavedObjectStateRef.cpp  SavedSpecialObjectState.cpp  SequenceTriggerState.cpp  SongChannelState.cpp  SongTriggerState.cpp  SoundStateContainer.cpp  SpawnTriggerAction.cpp  TimerItem.cpp  TimerTriggerAction.cpp  (+3 more)
src/hooks/cocos2d/: CCArray.cpp  CCArray.hpp  CCNode.cpp  CCNode.hpp  CCObject.cpp  CCObject.hpp
src/util/: InputStream.cpp  OutputStream.cpp  debug.cpp
